--- a/.builds/arch.yml
+++ b/.builds/arch.yml
@@ -12,8 +12,9 @@ tasks:
   - setup: |
       cd zzterm
       go version
+      go env
       go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
-      ./golangci-lint --version
+      golangci-lint --version
 
   - test: |
       cd zzterm
@@ -25,7 +26,7 @@ tasks:
 
   - lint: |
       cd zzterm
-      ./golangci-lint run
+      golangci-lint run
 
 triggers:
   - condition: "failure"
